Fixed labels and added coding behind

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -8,6 +8,6 @@
 
 #rText{text-align:center}
 
-h1{     text-align:center;
+h1{     ttext-align:center;
 		font-weight:bold;
 		font-size: 32px;}
